--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,54 @@
   line-height: 1.5;
   font-weight: 400;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: rgb(66, 107, 148);
+  background: linear-gradient(
+      45deg,
+      rgba(66, 107, 148, 1) 0%,
+      rgba(82, 90, 168, 1) 50%,
+      rgba(111, 98, 166, 1) 100%
+    )
+    no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container {
+  max-width: 480px;
+  background-color: #202226;
+  height: 90vh;
+  margin: 0 auto;
+  border-radius: 20px;
+  color: #d3e8e6;
+  padding: 20px 30px;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+.header {
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #4f5257;
+}
+
+.transaction-list {
+  list-style-type: none;
+  overflow-y: auto;
+}
+
+.transaction-list .list-item {
+  height: 70px;
+  background-color: #37393f;
+  margin-bottom: 8px;
+}
