--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,13 @@ body {
 }
 
 .container {
-  max-width: 480px;
+  max-width: 400px;
   background-color: #202226;
-  height: 90vh;
+  height: 85vh;
   margin: 0 auto;
   border-radius: 20px;
   color: #d3e8e6;
-  padding: 20px 30px;
+  padding: 20px 15px;
 
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -61,7 +61,6 @@ body {
 
 .transaction-list .date-info {
   min-width: 50px;
-  /* background-color: green; */
   border-right: 1px solid #4f5257;
   display: flex;
   flex-direction: column;
@@ -74,18 +73,10 @@ body {
 
 .transaction-list .transaction-container {
   padding: 0 10px;
-  /* background-color: blue; */
 }
 
 .transaction-list .transaction-info {
   margin-bottom: 5px;
-}
-
-.transaction-list .category {
-  background-color: #292c31;
-  padding: 0 10px;
-  border-radius: 100px;
-  font-size: 0.75rem;
 }
 
 .transaction-list .transaction-type {
@@ -95,8 +86,15 @@ body {
   font-size: 0.75rem;
 }
 
+.transaction-list .category {
+  /* background-color: #292c31; */
+  background-color: #334d7a;
+  padding: 0 10px;
+  border-radius: 100px;
+  font-size: 0.75rem;
+}
+
 .transaction-list .amount-info {
-  /* background-color: red; */
   padding: 5px;
   min-width: 50px;
   font-size: 1.25rem;
