--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,3 @@
-.footer {
-  margin-top: 30px;
-}
-
-.footer .btn {
-  padding: 12px 40px;
-  border: 3px solid #d3e8e6;
-  color: #ddd;
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 20px;
+.footer p {
+  text-align: center;
 }
